--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ping",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "",
   "main": "main.js",
   "scripts": {
@@ -14,5 +14,16 @@
   },
   "dependencies": {
     "ping": "^0.4.4"
+  },
+  "build": {
+    "productName": "Get-IP",
+    "appId": "com.meineanwendung",
+    "directories": {
+      "output": "dist"
+    },
+    "win": {
+      "target": "nsis",
+      "artifactName": "${productName}_Setup_${version}.${ext}"
+    }
   }
 }
